--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td>#</td>
         <td><%= link_to(group.title,group_path(group)) %></td>
-        <td><%= group.description %></td>
+        <td><%= simple_format(group.description) %></td>
         <td><%= group.user.email %></td>
         <td>
               <% if current_user && current_user == group.user %>
@@ -25,7 +25,7 @@
               <%= link_to("Delete", group_path(group),    class: "btn btn-sm btn-default",
                           method: :delete, data: { confirm: "Are you sure?" } )%>
                           <% end %>
-                          
+
           </td>
       </tr>
       <% end %>
